# BottleneckTokens

./: .gitignore  README.md  README_zh.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt
configs/datasets/: btoks_expanded_train_datasets_v1.yaml  btoks_expanded_train_datasets_v2.yaml  btoks_mmeb_train.yaml  btoks_mmeb_train_optimized.yaml  expanded_train_datasets_v1.yaml  expanded_train_datasets_v2.yaml  expanded_train_datasets_v3.yaml  mmeb_train.yaml  mmeb_train_optimized.yaml
configs/eval/: mmeb.yaml
configs/experiments/: vlm2vec.yaml
configs/models/: btoks_qwen2vl_2b_v1.yaml  btoks_qwen2vl_2b_v2.yaml  btoks_qwen2vl_7b_v1.yaml  btoks_qwen3vl_2b_v1.yaml  gme_qwen2vl_2b.yaml  vlm2vec.yaml  vlm2vec_qwen25vl_3b.yaml  vlm2vec_qwen2vl_2b.yaml  vlm2vec_qwen2vl_7b.yaml  vlm2vec_qwen3vl_2b.yaml
configs/peft/: lora_default.yaml  lora_qwen2vl.yaml
configs/presets/: btoks_gme_qwen2vl_2b_v1.yaml  btoks_qwen2vl_2b_v1.yaml  btoks_qwen2vl_2b_v1_expanded_train_v1.yaml  btoks_qwen2vl_2b_v2.yaml  btoks_qwen2vl_7b_v1.yaml  btoks_qwen3vl_2b_v1.yaml  btoks_qwen3vl_2b_v1_expanded_train_v1.yaml  btoks_qwen3vl_2b_v1_expanded_train_v2.yaml  gme_qwen2vl_2b.yaml  vlm2vec_qwen25vl_3b.yaml  vlm2vec_qwen2vl_2b.yaml  vlm2vec_qwen2vl_2b_expanded_train_v1.yaml  vlm2vec_qwen2vl_7b.yaml  vlm2vec_qwen3vl_2b.yaml
configs/training/: btoks_base.yaml  gme_base.yaml  vlm2vec_base.yaml
docs/en/: index.md
docs/en/api/: evaluation.md  logging.md  model.md  trainer.md
docs/en/architecture/: config-system.md  evaluation-system.md  module-pipeline.md  overview.md  registry-system.md  training-system.md
docs/zh/: index.md
examples/datasets/: load_train_datasets.py  optimize_weights.py  verify_btoks_config.py
examples/model/: generate_with_btoks_cache.py
scripts/: check_public_release.py  download_lance_data.py  eval.py  simulate_training_flops.py  train.py
scripts/convert/: README.md  clean_dataset.py  repack_lance_table.py  validate_dataset.py
scripts/model/: migrate_base_model_config.py
src/vlm2emb/: __init__.py  auto.py  config.py  exceptions.py  model.py  outputs.py  registry.py
tests/: test_batch_interleave_sampler.py  test_btoks_ablation.py  test_btoks_inference.py  test_btoks_trainer.py  test_config_loader.py  test_dataset_config_variants.py  test_dataset_runtime_transforms.py  test_generate_with_btoks_cache_example.py  test_gme_style_training.py  test_grad_cache.py  test_mmeb_image_conversion.py  test_mmeb_v2_cli.py  test_mmeb_video_conversion.py  test_mmeb_visdoc_conversion.py  test_model_reference_mode.py  test_processor_video_resolution.py  test_qwen_vl_support.py  test_rank_logger.py  test_runtime_config_boundaries.py  test_text_normalization_policy.py  test_training_flops_simulation.py  test_vlm2vec_trainer.py
tests/data/: __init__.py  test_activitynet_captions_conversion.py  test_breakfast_conversion.py  test_charades_sta_conversion.py  test_country211_conversion.py  test_didemo_conversion.py  test_document_retrieval_subset_conversion.py  test_gqa_conversion.py  test_hmdb51_conversion.py  test_kinetics700_conversion.py  test_llavahound_dataset.py  test_mbeir_conversion.py  test_mmeb_train_dataset.py  test_mmeb_train_expected_content.py  test_mmeb_train_parser_registry.py  test_mmlongbench_doc_conversion.py  test_msrvtt_conversion.py  test_msvd_conversion.py  test_nextqa_conversion.py  test_place365_conversion.py  test_quality_cleaning.py  test_quality_reports.py  test_quality_validators.py  test_qvhighlight_conversion.py  test_refcoco_conversion.py  test_scienceqa_conversion.py  test_ssv2_conversion.py  test_textvqa_conversion.py  test_ucf101_conversion.py  test_vatex_conversion.py  test_vidore_dataset.py  test_visrag_dataset.py  test_visual7w_pointing_conversion.py  test_vizwiz_conversion.py  test_wikissnq_conversion.py  test_youcook2_conversion.py
tests/evaluate/: test_benchmark_base.py  test_eval_io.py  test_eval_script.py  test_evaluate.py  test_metrics.py  test_mmeb_family_registry.py  test_mmeb_image_group_a_audit.py  test_mmeb_image_group_b_audit.py  test_mmeb_v2_runtime_smoke_local.py  test_mmeb_video_group_c_audit.py  test_mmeb_video_group_d_audit.py  test_mmeb_video_group_e_audit.py  test_mmeb_visdoc_group_f_audit.py  test_retrieval_distributed_protocol.py  test_retrieval_evaluator.py  test_retrieval_runtime_transform.py  test_trainer_benchmark_eval.py
(+531 files in other folders)
